// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLoadingLogo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingLogo ouiLoadingLogo--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiLoadingLogo__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingLogo logo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingLogo ouiLoadingLogo--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiLoadingLogo__icon"
  >
    <span
      data-ouiicon-type="logoElastic"
    />
  </span>
</span>
`;

exports[`OuiLoadingLogo size l is rendered 1`] = `
<span
  class="ouiLoadingLogo ouiLoadingLogo--large"
>
  <span
    class="ouiLoadingLogo__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingLogo size m is rendered 1`] = `
<span
  class="ouiLoadingLogo ouiLoadingLogo--medium"
>
  <span
    class="ouiLoadingLogo__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingLogo size xl is rendered 1`] = `
<span
  class="ouiLoadingLogo ouiLoadingLogo--xLarge"
>
  <span
    class="ouiLoadingLogo__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;
